# nbias

./: .gitignore  CMakeLists.txt  README.md  build.sh  nbias.sublime-project  requirements.txt
conf/: domain_prob_conf.json
fixtures/: GCA_000010525.1_pfam.csv  GCA_000010525.1_pfam_probability_left.csv  GCA_000010525.1_tri_nucleotide_distance_to_mean.csv  assemblies.csv  distribution.csv  domain_prob_conf.json  pfam_master.csv
nbias/: model_protein_length_vs_jsd.py  trna_synt_average_jsd.py
notebook/: AA distance vs length.ipynb  Assemblies metadata.ipynb  Data exploration.ipynb  Distributions deep dive.ipynb  Intervention.ipynb  Jensen-Shannon distance to tri-nucleotide mean.ipynb  Optimal codons (stadium tAI).ipynb  Preprocessing exploration.ipynb  Protein domain results (amino acid distribution).ipynb  Protein domain results.ipynb
preprocessing/: assembly_summary.py  copy_and_compress.py  extract_cds_arc.py  extract_cds_bac.py  extract_domains.py  split_fasta.py
report/: protein_length.tex  tri_nucleotide_dist.bib  tri_nucleotide_dist.tex  trna_synt_review.bib  trna_synt_review.tex
report/diagrams/: trna_synt_1g_dist.eps
report/figures/: average_protein_length.eps  e_coli_distances.eps  length_vs_distance.eps  r_squared_comparison.eps
src/: compute_distance.cpp  compute_distance_task.cpp  compute_distribution.cpp  domain_probability.cpp  domain_probability_task.cpp  intervention.cpp  run_count.cpp  tri_bias.cpp  tri_bias_task.cpp
src/assembly/: assembly.cpp
src/codons/: codons.cpp  swap_codons.cpp
src/count/: tri_count.cpp
src/distance/: distance.cpp  distance_util.cpp
src/distribution/: distribution.cpp
src/dna/: dna.cpp
src/domain/: domain.cpp
src/fasta/: fasta.cpp
src/probability/: probability.cpp  probability_util.cpp
src/task/: compute_distance_task.cpp  compute_distribution_task.cpp  context.cpp  domain_probability_task.cpp  intervention_task.cpp  tri_bias_task.cpp
src/tri_bias/: run_count.cpp  tri_bias.cpp
test/assembly/: test_assembly.cpp
test/codons/: test_codons.cpp
test/count/: test_tri_count.cpp
test/distance/: test_distance.cpp
test/distribution/: test_distribution.cpp
test/dna/: test_dna.cpp
test/domain/: test_domain.cpp
test/fasta/: test_fasta.cpp
test/probability/: test_probability.cpp
test/task/: test_context.cpp
test/tri_bias/: test_tri_count.cpp
